kops/deployment-chatapp/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-backend-dep
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp-backend
  template:
    metadata:
      labels:
        app: chatapp-backend
    spec:
      containers:
        - name: chatapp-django
          image: sashankreddy97/chatapp-backend
          ports:
            - name: backend-port
              containerPort: 8000

          startupProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

          command: ["bash", "-c"]
          args:
            - |
              source /app/chat_app/venv/bin/activate && \
              cd /app/chat_app/fundoo && \
              python manage.py migrate --noinput || echo "Migration warning: maybe already applied" && \
              python manage.py runserver 0.0.0.0:8000
