kops/deployment-chatapp/backend/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-backend-dep-canary
  labels:
    app: chatapp-backend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp-backend
      version: v2
  template:
    metadata:
      labels:
        app: chatapp-backend
        version: v2
    spec:
      containers:
        - name: chatapp-django
          image: sashankreddy97/chatapp-backend
          ports:
            - name: backend-port
              containerPort: 8000

          startupProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
