kops/deployment-chatapp/backend/lbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: chatapp-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
