kops/deployment-chatapp/backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-backend
spec:
  selector:
    app: chatapp-backend
  ports:
    - name: backend-port
      port: 8000
      targetPort: backend-port
